# rag42

./: README.md  pyproject.toml  test_loader.py
data/: guide.md  note.txt
data/code/: script.py
rag42/: cli.py
rag42/io/: loader.py
